--- a/anipat/products.html
+++ b/anipat/products.html
@@ -55,7 +55,7 @@
                                         <li class="current"><a href="products.html">Products</a></li>
                                         <li><a href="service.html">Services</a></li>
                                         <li><a href="contact.html">Contact</a></li>
-                                        <li><a><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
+                                        <li><a href="shoppingcart.html"><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -122,82 +122,118 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_1.png" alt="">
+                    <div class="single_service">                   
+                             <div class="box">
+                                 <img src="img/Product/suatamoliver.jpg"x>
                              </div>
-                         </div>
                          <div class="service_content text-center">
-                            <h3>Foods</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                            <h3>Sữa Tắm Oliver</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p> 
+                            <div class="row">
+                                <div class="col-6">
+                                    <button type="button" class="btn btn-dark">Buy</button>
+                                </div>
+                                <div class="col-6">
+                                    <button type="button" class="btn btn-dark">Detail</button>
+                                </div>
+                            </div>
                          </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service active">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_2.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
-                            <h3>Toys</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                    <div class="single_service">                   
+                        <div class="box">
+                            <img src="img/Product/suatamoliver.jpg"x>
+                        </div>
+                    <div class="service_content text-center">
+                       <h3>Foods</h3>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                       <div class="row">
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Buy</button>
+                        </div>
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Detail</button>
+                        </div>
                     </div>
+                    </div>
+               </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_3.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
-                            <h3>Decorations</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                    <div class="single_service">                   
+                        <div class="box">
+                            <img src="img/Product/suatamoliver.jpg"x>
+                        </div>
+                    <div class="service_content text-center">
+                       <h3>Foods</h3>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                       <div class="row">
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Buy</button>
+                        </div>
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Detail</button>
+                        </div>
                     </div>
+                    </div>
+               </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_1.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
-                            <h3>Foods</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                    <div class="single_service">                   
+                        <div class="box">
+                            <img src="img/Product/suatamoliver.jpg"x>
+                        </div>
+                    <div class="service_content text-center">
+                       <h3>Foods</h3>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                       <div class="row">
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Buy</button>
+                        </div>
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Detail</button>
+                        </div>
                     </div>
+                    </div>
+               </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service active">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_2.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
-                            <h3>Toys</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                        <div class="single_service">                   
+                        <div class="box">
+                            <img src="img/Product/suatamoliver.jpg"x>
+                        </div>
+                    <div class="service_content text-center">
+                       <h3>Foods</h3>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                       <div class="row">
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Buy</button>
+                        </div>
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Detail</button>
+                        </div>
                     </div>
+                    </div>
+               </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_3.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
-                            <h3>Decorations</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                    <div class="single_service">                   
+                        <div class="box">
+                            <img src="img/Product/suatamoliver.jpg"x>
+                        </div>
+                    <div class="service_content text-center">
+                       <h3>Foods</h3>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                       <div class="row">
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Buy</button>
+                        </div>
+                        <div class="col-6">
+                            <button type="button" class="btn btn-dark">Detail</button>
+                        </div>
                     </div>
+                    </div>
+               </div>   
                 </div>
             </div>
         </div>
@@ -206,59 +242,7 @@
 
 
     <!-- team_area_start  -->
-    <div class="team_area">
-        <div class="container">
-            <div class="row justify-content-center ">
-                <div class="col-lg-6 col-md-10">
-                    <div class="section_title text-center mb-95">
-                        <h3>Our Team</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_team">
-                        <div class="thumb">
-                            <img src="img/team/1.png" alt="">
-                        </div>
-                        <div class="member_name text-center">
-                            <div class="mamber_inner">
-                                <h4>Rala Emaia</h4>
-                                <p>Senior Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_team">
-                        <div class="thumb">
-                            <img src="img/team/2.png" alt="">
-                        </div>
-                        <div class="member_name text-center">
-                            <div class="mamber_inner">
-                                <h4>jhon Smith</h4>
-                                <p>Senior Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_team">
-                        <div class="thumb">
-                            <img src="img/team/3.png" alt="">
-                        </div>
-                        <div class="member_name text-center">
-                            <div class="mamber_inner">
-                                <h4>Rala Emaia</h4>
-                                <p>Senior Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <!-- team_area_start  -->
 
     <!-- contact_anipat_start  -->
